--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -40,13 +40,13 @@ target_link_libraries(aecm signal_processing)
 add_executable(aecm_main aecm_main.cc)
 target_link_libraries(aecm_main aecm test_common)
 
-add_executable(ns_main ns_main.c noise_suppression.c noise_suppression.h)
+add_executable(ns_main ns_main.c src/noise_suppression.c include/noise_suppression.h)
 target_link_libraries(ns_main test_common)
 
-add_executable(cng_main cng_main.cpp cng.cpp cng.h)
+add_executable(cng_main cng_main.cpp src/cng.cpp include/cng.h)
 target_link_libraries(cng_main test_common)
 
-add_executable(agc_main agc_main.c agc.c agc.h)
+add_executable(agc_main agc_main.c src/agc.c include/agc.h)
 target_link_libraries(agc_main test_common)
 
 aux_source_directory(ns NS_SRC)
